# renewables-forecasting

./: .gitignore  pyproject.toml
src/renewables_forecasting/config/: data_constants.py  data_sources.py  grid.py  paths.py  solar_model_config.yaml  technologies.py  wind_model_config.yaml
src/renewables_forecasting/data/: build_features.py  capacity_grids.py  dwd.py  era5.py  mastr.py  smard.py  time.py
src/renewables_forecasting/data/analysis/: mastr_coordinate_quality.py  total_capacity_end_of_year.py  wind_hub_heights_boxplot.py  wind_plants_boundary_coords.py
src/renewables_forecasting/models/: cnn.py  config.py  dataset.py  evaluate.py  evaluation.py  train.py  training.py
src/renewables_forecasting/tasks/: task_build_capacity_grids.py  task_build_cyclical_time_features.py  task_build_solar_capacity_grids.py  task_build_solar_features.py  task_build_wind_capacity_grids.py  task_build_wind_features.py  task_download_dwd.py  task_download_postal_code_data.py  task_dwd_data_pipeline.py  task_era5_data_pipeline.py  task_era5_solar_download_preproc.py  task_era5_wind_download_preproc.py  task_geonames_data_pipeline.py  task_mastr_data_pipeline.py  task_mastr_solar_preprocessing.py  task_mastr_wind_preproc.py  task_mastr_wind_preprocessing.py  task_plant_data_download_mastr_geonames.py  task_smard_data_pipeline.py  task_smard_solar_download_preproc.py  task_smard_solar_download_preprocessing.py  task_smard_wind_download_preproc.py
src/renewables_forecasting/viz/: plot_weather_grid.py  weather_grid.py
(+2 files in other folders)
